--- a/style.css
+++ b/style.css
@@ -137,3 +137,10 @@ footer {
     color: #888;
     font-size: 0.9rem;
 }
+
+/* Giscus Container */
+.giscus-container {
+    margin-top: 50px;
+    padding-top: 30px;
+    border-top: 1px solid #eee;
+}
